--- a/style.css
+++ b/style.css
@@ -5,114 +5,136 @@
     /* font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
 }
 
-body{
-      background-color: rgb(240, 237, 237);
-}
-
-#navbar {
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-    background-color: rgba(240, 237, 237, 0.731);
-    /* justify-content: cent */
-    align-items: center;
-    padding: 20px;
-}
-
-#component{
-    display: flex;
-    justify-content: right;
-    list-style: none;
+html,body{
+    height: 100%;
     width: 100%;
-    padding-right: 25px;
-}
-#component li {
-    margin: 0;
-}
-
-#component li a{
-    color: black;
-    font-size: large;
-    text-decoration: none;
-    padding: 8px 16px;
-    border-radius: 5px;
-}
-#component li a:hover{
-    border: 1px solid black;
-    padding: 0.5em;
+    background-color: rgb(240, 237, 237);
 }
 
 .main{
-    display: flex;
-    justify-content: center;
-    /* gap:20px; */
-    width: 100%;
-    height: 43vw;
-    padding: 105px;
-}
-
-.intro{
-    display: flex;
-    flex-direction:row;
-    justify-content: center;
-    align-items: stretch;
-    /* width: 60%; */
-    padding: 60px;
-    font-size:2.5em;
-}
-.intro pre{
-    font-weight:bolder;
-}
-.intro-text{
-   font-size: 1.5em;
-   display: block; /*  ensure each line in a new row. */
-    margin-bottom: 15px;
-    line-height: 1.5; /* add space between line */
-}
-
-.logo-img{
-    border-radius: 150px;
-    width: 450px;
-    height: 380px;
-}
-
-.about{
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100%;
-    gap: 120px;
-        width: 100%;
-    height: 43vw;
-    padding: 105px;
+    width: 100%;
+}
+
+.navbar{
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    height: 60px;
+    width: 100%;
+    background-color: #e0dddd;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 5vw;
+}
+
+.navbar h2{
+    font-size: 2.5vw;
+    font-weight: 900;
+}
+
+.navbar-part{
+    display: flex;
+    gap: 2vw;
+    align-items: center;
+}
+.navbar-part a{
+    color: black;
+    font-size: 1.5vw;
+    font-weight: 800;
+    text-decoration: none;
+}
+.navbar-part button{
+    background-color: #8370ed;
+    padding: 0.8vw 1.5vw;
+    border: none;
+    border-radius: 5px;
+    font-size: 1vw;
+    font-weight: 600;
+}
+.navbar-part i{
+    display: none;
+}
+.main-section{
+    height: calc(100% - 60px);
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.intro{
+    height: 100%;
+    width: 50%;
+    padding: 10vw 5vw;
+}
+.intro h2{
+    /* padding: 15vw 4vw 0 5vw; */
+    /* display: block; */
+    font-size: 5.5vw;
+}
+.into button{
+    background-color: #8370ed;
+}
+.intro h2 #Web{
+    color: #8370ed;
+}
+.contact-btn{
+    background-color: #8370ed;
+    padding: 1vw 3vw;
+    border: none;
+    border-radius: 5px;
+    margin: 1vw 0;
+    font-size: 1.1vw;
+    font-weight: 600;
+}
+.icon{
+    font-size: 4vw;
+}
+.logo{
+    height: 100%;
+    width: 50%;
+}
+.logo img{
+    width: 90%;
+    height: 100%;
+}
+.about{
+    height: calc(100% - 60px);
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 3vw;
+    padding: 5vw 0 0 2vw ;
 }
 .about-img{
-    width: 40%;
+    width: 60%;
 }
-.a-image{
-    width: 300px;
-    height: 300px;
-    border-radius: 50%;
+.about-img img{
+    width: 100%;
+    height: 100%;
+    border-radius: 20%;
 }
 .about-inro{
-    width: 60%;
+    width: 40%;
 }
 
 .about-heading{
     /* text-align: center; */
-    font-size: 2.5em;
+    font-size: 2.5vw;
     font-weight: bolder;
-    margin-bottom: 0.7em;
+    margin-bottom: 0.7vw;
 }
 .content{
-    font-size: 22px;
+    font-size: 2vw;
     font-style: oblique;
-    margin-bottom: 0.5em;
+    margin-bottom: 1vw;
 }
 #about-fav-heading{
-    font-size: 1.5em;
+    font-size: 1.5vw;
     font-weight: bold;
-    margin-bottom: 0.7em;
+    margin-bottom: 1vw;
 }
 .tech-posts{
     font-style: oblique;
@@ -206,4 +228,64 @@ footer{
     position: relative;
     bottom: 0;
     width: 100%;
+}
+
+
+
+
+
+
+@media (max-width:600px) {
+    .navbar{
+        padding: 0 5.5vw;
+        height:50px;
+    }
+    .navbar h2{
+        font-size: 5vw;
+        font-weight: 900;
+    }
+    .navbar-part a{
+        font-size: 2.5vw;
+        font-weight: 800;
+        display: none;
+    }
+    .navbar-part button{
+    background-color: #8370ed;
+    padding: 2vw 4vw;
+    border: none;
+    border-radius: 5px;
+    font-size: 2.8vw;
+    font-weight: 600;
+    }
+    .navbar-part i{
+        display: block;
+        font-size: 6vw;
+        font-weight: 900;
+    }
+    .main-section{
+        flex-direction: column;
+        /* flex-wrap: wrap; */
+        height: calc(100% - 50px);
+        /* width: 100%; */
+    }
+    .intro{
+        width: 100%;
+        height: 55%;
+    }
+    .logo{
+        width: 100%;
+        height: 45%;
+        margin-left: 9%;
+    }
+    .intro h2{
+        font-size: 12vw;
+    }
+    .contact-btn{
+        font-size: 6vw;
+        margin: 4vw 0;
+    }
+    .icon{
+        font-size: 8vw;
+    }
+
 }
