--- a/style.css
+++ b/style.css
@@ -317,6 +317,7 @@ footer{
     }
     .about-img img{
         margin-left: 6vw;
+        margin-top: 1vw;
     }
     .about-intro{
         width: 100%;
