--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ html,body{
     display: none;
 }
 .main-section{
-    height: calc(100% - 60px);
+    height: calc(100% - 70px);
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -164,21 +164,35 @@ html,body{
     margin-bottom: 1vw;
     border-radius: 1vw;
 }
+.techstack{
+    height: calc(100% - 60px);
+    width: 100%;
+}
+.techstack-container h2{
+    margin-top: 1vw;
+}
+.techstack-container{
+    width: 100%;
+    height: 100%;
+    padding: 0 5vw;
+}
 .tech-head{
+    margin-top: 1.5vw;
     text-align: center;
+    color: #8370ed;
+    font-size: 4vw;
 }
 .grid-container {
     width: 100%;
     display: grid;
-    grid-template-columns: 24% 24% 24% 24%;
-    gap: 20px;
-    padding: 20px;
+    grid-template-columns: 20% 20% 20% 20%;
+    gap: 2vw;
 }
 
 /* Individual Tech Card */
 .tech-card {
     background: white;
-    padding: 15px;
+    padding:  0 0.5vw;
     border-radius: 10px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
     text-align: center;
@@ -193,7 +207,7 @@ html,body{
 
 /* Font Styling */
 .tech-card h3 {
-    font-size: 25px;
+    font-size: 1.5vw;
 }
 .Contact{
     width: 100%;
@@ -219,26 +233,26 @@ html,body{
     display: flex;
     flex-direction: column;
     gap: 1.8vw;
-    padding: 4vw;
+    padding: 3vw;
     border-radius: 1vw;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
 }
 .Contact-form input,textarea{
     background-color: #d3d3d3;
     border-radius: 1vw;
     font-size: 1vw;
+    font-weight: 400;
     padding: 1vw;
     border: none;
+    outline: none;
 }
-.Contact-form label{
-    display: none;
-    font-size: 1.5em;
-}
-
 .send-btn{
+    margin-top: 1vw;
+    border: none;
+    outline: none;
     background-color: #d3d3d3;
-    text-align: center;
-    padding: 0.5vw;
+    /* text-align: center; */
+    padding: 0.8vw;
     border-radius: 8px;
 }
 button:active{
@@ -351,5 +365,36 @@ footer{
    font-size: 5vw;  
    margin-top: 2vw;
    border-radius: 1vw;                                           
+    }
+    .Contact{
+        height: calc(100% - 60px);
+        width: 100%;
+    }
+    .Contact-form{
+        height: 100%;
+        justify-content: center;
+        padding: 5vw 13vw;
+    }
+    .Contact-form form{
+        gap: 5vw;
+        height: 60%;
+        width: 100%;
+        padding: 9vw 5vw;
+        border-radius: 3vw;
+    }
+    .Contact-form h1{
+        font-size: 12vw;
+    }
+    .Contact-form form input,textarea{
+        padding: 3vw 3vw;
+        margin-top: 3vw;
+        font-size: 5vw;
+        border-radius: 4vw;
+    }
+    .send-btn{
+        display: inline-block;
+        padding: 2vw 2vw;
+        font-size: 5vw;
+        border-radius: 3vw;
     }
 }
