--- a/style.css
+++ b/style.css
@@ -69,8 +69,6 @@ html,body{
     padding: 10vw 5vw;
 }
 .intro h2{
-    /* padding: 15vw 4vw 0 5vw; */
-    /* display: block; */
     font-size: 5.5vw;
 }
 .intro button{
@@ -134,7 +132,7 @@ html,body{
 }
 
 .about-heading{
-    /* text-align: center; */
+    color: #8370ed;
     font-size: 2.7vw;
     font-weight: bolder;
     margin-bottom: 0.7vw;
@@ -165,7 +163,7 @@ html,body{
     border-radius: 1vw;
 }
 .techstack{
-    height: calc(100% - 60px);
+    height: 100%;
     width: 100%;
 }
 .techstack-container h2{
@@ -173,7 +171,7 @@ html,body{
 }
 .techstack-container{
     width: 100%;
-    height: 100%;
+    height: calc(100% - 60px);
     padding: 0 5vw;
 }
 .tech-head{
@@ -200,9 +198,9 @@ html,body{
 
 /* Image Styling */
 .tech-card img {
-    width: 80px;
+    width: 5vw;
     height: auto;
-    margin-bottom: 10px;
+    margin-bottom: 0.4vw;
 }
 
 /* Font Styling */
@@ -396,5 +394,32 @@ footer{
         padding: 2vw 2vw;
         font-size: 5vw;
         border-radius: 3vw;
+    }
+    .techstack-container{
+        height: calc(100% - 50px);
+        width: 100%;
+        padding:2vw 5vw ;
+    }
+    .tech-head{
+        font-size: 9vw;
+        font-family: sans-serif;
+    }
+    .grid-container{
+        /* height: 100%; */
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(15vw,25vw));
+        gap: 5vw;
+        padding: 2vw 0;
+    }
+    .tech-card{
+        text-align: center;
+    }
+    .tech-card h3{
+        font-size: 5vw;
+        text-align: center;
+    }
+    .tech-card img{
+        width: 11vw;
     }
 }
