--- a/style.css
+++ b/style.css
@@ -109,15 +109,20 @@ body {
     width: 50%;
     padding: 10vw 5vw;
 }
-
+#name{
+    color: #8370ed;
+}
 .intro h2 {
-    font-size: 5.5vw;
+    padding-right: 10vw;
+    font-size: 4.5vw;
 }
 
 .intro button {
     background-color: #8370ed;
 }
-
+.intro .subheading{
+    font-size: 2.7vw;
+}
 .intro h2 #Web {
     color: #8370ed;
 }
@@ -343,6 +348,7 @@ button:active {
     }
 
     .navbar {
+        width: 100%;
         padding: 0 5.5vw;
         height: 50px;
     }
@@ -377,19 +383,22 @@ button:active {
         height: 45%;
         padding: 10vw 5vw 0vw 5vw;
     }
-
+    .intro .subheading{
+        font-size: 9vw;
+    }
     .logo {
         width: 100%;
         height: 55%;
-        margin-left: 9%;
     }
 
     .logo img {
-        padding-bottom: 12vw;
+        padding-bottom: 5vw;
+        padding-left: 5vw;
     }
 
     .intro h2 {
-        font-size: 12vw;
+        padding-right: 0vw;
+        font-size: 13vw;
     }
 
     .contact-btn {
