--- a/style.css
+++ b/style.css
@@ -161,6 +161,7 @@ body {
     width: 100%;
     display: flex;
     align-items: center;
+    justify-content: center;
     padding: 6vw 5vw;
 }
 
@@ -238,6 +239,7 @@ body {
     width: 100%;
     height: calc(100% - 60px);
     padding: 0 5vw;
+    margin-bottom:15vw;
 }
 
 .tech-head {
